Bug 105029 - simdlib_512_avx512.inl:371:57: error: could not convert ‘_mm512_mask_blend_epi32((__mmask16)(ImmT), a, b)’ from ‘__m512i’ {aka ‘__vector(8) long long int’} to ‘SIMDImpl::SIMD512Impl::Float’
Summary: simdlib_512_avx512.inl:371:57: error: could not convert ‘_mm512_mask_blend_ep...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/swr (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: George Kyriazis
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-10 08:46 UTC by Vinson Lee
Modified: 2018-02-16 19:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2018-02-10 08:46:01 UTC
Build error with GCC 8.

  CXX      rasterizer/core/libswrKNL_la-api.lo
In file included from ./rasterizer/common/simdlib.hpp:170,
                 from ./rasterizer/common/simdintrin.h:28,
                 from ./rasterizer/core/format_types.h:31,
                 from ./rasterizer/core/format_traits.h:32,
                 from ./rasterizer/core/multisample.h:30,
                 from ./rasterizer/core/backend.h:33,
                 from rasterizer/core/api.cpp:35:
./rasterizer/common/simdlib_512_avx512.inl: In static member function ‘static SIMDImpl::SIMD512Impl::Float SIMDImpl::SIMD512Impl::AVX512Impl::blend_epi32(SIMDImpl::SIMD512Impl::Integer, SIMDImpl::SIMD512Impl::Integer)’:
./rasterizer/common/simdlib_512_avx512.inl:371:57: error: could not convert ‘_mm512_mask_blend_epi32((__mmask16)(ImmT), a, b)’ from ‘__m512i’ {aka ‘__vector(8) long long int’} to ‘SIMDImpl::SIMD512Impl::Float’
     return _mm512_mask_blend_epi32(__mmask16(ImmT), a, b);
                                                         ^
Comment 1 George Kyriazis 2018-02-16 17:09:32 UTC
resolved with f1fbeb1a53
Comment 2 Emil Velikov 2018-02-16 19:03:01 UTC
Is there something broken on my end - the fix seems to be missing from the list. Also we'll need the fix in stable since the offending commit landed in 17.2.0-devel

commit fc4f6c44c479a97b9cad5d08f0d9cd71a8e1e5f8
Author: Tim Rowley <timothy.o.rowley@intel.com>
Date:   Thu Jun 15 15:24:07 2017 -0500

    swr/rast: Switch intrinsic usage to SIMDLib


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.